# haskell-weighted-inits

./: LICENSE  README.md  stack.yaml  weighted-inits.cabal
app/: Main.hs
src/: Parser.hs  ProgramOptions.hs  WeightedInits.hs
