name:                weighted-inits
version:             0.2.0.0
synopsis:            generator for weighted inits
description:         Please see README.md
homepage:            https://github.com/sclausen/haskell-weighted-inits
license:             MIT
license-file:        LICENSE
author:              Sebastian Clausen
maintainer:          github@sebastian-clausen.de
copyright:           2016 Sebastian Clausen
category:            Utils
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     WeightedInits
                     , ProgramOptions
                     , Parser
  build-depends:       base >= 4.7 && < 5
                     , MonadRandom >= 0.4.2.2
                     , optparse-applicative >= 0.12.1.0
                     , text >= 1.2.2.1
                     , parsec >= 3.1.9
  default-language:    Haskell2010

executable weighted-inits
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2
  build-depends:       base
                     , weighted-inits
                     , MonadRandom >= 0.4.2.2
                     , optparse-applicative >= 0.12.1.0
                     , text >= 1.2.2.1
                     , parsec >= 3.1.9
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sclausen/haskell-weighted-inits
